updated stuff