@@ -8,6 +8,19 @@
   <modelVersion>4.0.0</modelVersion>
 
   <name>Alpenglow Stack with Digital Ocean</name>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>19</source>
+          <target>19</target>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <artifactId>io.alpenglow.digitalocean</artifactId>
 
   <properties>
