@@ -74,8 +74,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <compilerArgs>${maven.compiler.args}</compilerArgs>
+          <compilerArgs>--enable-preview</compilerArgs>
           <forceJavacCompilerUse>true</forceJavacCompilerUse>
+          <source>19</source>
+          <target>19</target>
         </configuration>
       </plugin>
       <plugin>
